--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -21,7 +21,7 @@
                         <div class="form-control">
                             <%= f.select :category_id,
                                 Category.all.map {|f| [f.name, f.id]},
-                                include_blank: true,
+                                { include_blank: true },
                                 required: true
                             %>
                         </div>
@@ -33,9 +33,11 @@
                         <div class="form-control">
                             <%= f.select :subcategory_id,
                                 [],
-                                include_blank: true,
-                                name: "listing[subcategory_id]",
-                                id: "listing_subcategory_id",
+                                {
+                                    id: "listing_subcategory_id",
+                                    include_blank: true,
+                                    name: "listing[subcategory_id]",
+                                },
                                 required: true
                             %>
                         </div>
@@ -56,7 +58,11 @@
                         <div class="input-group-addon">Price</div>
                         <%= f.text_field :price,
                             class:"form-control",
-                            required: true
+                            required: true,
+                            type: "text",
+                            maxlength: "32",
+                            pattern: "[0-9.,]{32}",
+                            placeholder: "exp. 1234, whole dollar amounts"
                         %>
                     </div>
                     <br>
@@ -67,7 +73,9 @@
                             class: "form-control",
                             required: true,
                             type: "text",
-                            pattern: "[A-Za-z]{3}"
+                            maxlength: "128",
+                            pattern: "[a-zA-Z0-9~!@#$%^&*()_+=- ,./<>?;':\"[]\\{}|/*-+]{128}",
+                            placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
                     <br>
@@ -76,7 +84,11 @@
                         <div class="input-group-addon">City</div>
                         <%= f.text_field :city,
                             class: "form-control",
-                            required: true
+                            required: true,
+                            type: "text",
+                            maxlength: "32",
+                            pattern: "[a-zA-Z0-9~!@#$%^&*()_+=- ,./<>?;':\"[]\\{}|/*-+]{32}",
+                            placeholder: "exp. Sometown"
                         %>
                     </div>
                     <br>
@@ -85,7 +97,11 @@
                         <div class="input-group-addon">State</div>
                         <%= f.text_field :state,
                             class: "form-control",
-                            required: true
+                            required: true,
+                            type: "text",
+                            maxlength: "2",
+                            pattern: "[A-Z]{2}",
+                            placeholder: "exp. FL"
                         %>
                     </div>
                     <br>
@@ -95,7 +111,10 @@
                         <%= f.text_field :zipcode,
                             class: "form-control",
                             required: true,
-                            maxlength: "5"
+                            type: "number",
+                            maxlength: "5",
+                            pattern: "[0-9]{5}",
+                            placeholder: "exp. 12345"
                         %>
                     </div>
                     <br>
@@ -104,14 +123,18 @@
                         <div class="input-group-addon">Description</div>
                         <%= f.text_area :description,
                             class: "form-control",
-                            required: true
+                            required: true,
+                            type: "text",
+                            maxlength: "2048",
+                            pattern: "[a-zA-Z0-9!,.?-]{2048}",
+                            placeholder: "exp. Describe the item for sale as detailed as possible."
                         %>
                     </div>
                     <br>
 
                     <div class="input-group">
                         <div class="actions">
-                            <%= f.submit "Submit Your Post",
+                            <%= f.submit "Submit Listing",
                                 class: "btn btn-success",
                                 id: "listings_submit"
                             %>
