UPDATED helper script.

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -75,7 +75,7 @@
                             required: true,
                             type: "text",
                             maxlength: "128",
-                            pattern: "[a-zA-Z0-9~!@#$%^&*()_+=- ,./<>?;':\"[]\\{}|/*-+]{128}",
+                            pattern: "[A-Za-z0-9 _.,!\"\']{128}",
                             placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
@@ -88,7 +88,7 @@
                             required: true,
                             type: "text",
                             maxlength: "32",
-                            pattern: "[a-zA-Z0-9~!@#$%^&*()_+=- ,./<>?;':\"[]\\{}|/*-+]{32}",
+                            pattern: "[A-Za-z0-9 _.,!\"\']{32}",
                             placeholder: "exp. Sometown"
                         %>
                     </div>
