REMOVED Connechub roles with a single page. UPDATED contact us page.

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,32 +1,21 @@
-
-    <!-- Page Content -->
-   <div class="container">
-
-        <hr class="featurette-divider">
-
-        <!-- First Featurette -->
-        <div class="featurette" id="about">
-
-            <img class="featurette-image img-circle img-responsive pull-right" style="width: 450px; height: 440px" src="/assets/cntu6-5593ac848a1a6904b642f25714717933b4fb377cd7e60b7060f8729e74472e04.jpg" alt="Cntu6 5593ac848a1a6904b642f25714717933b4fb377cd7e60b7060f8729e74472e04" />
-            <h2 class="featurette-heading">Welcome to Connechub
-                <span class="text-muted">Contact us</span>
-            </h2><hr>
-                <ul style="list-style-type: none; ">
-                <li><span class = "small-heading"> Press:</span> <span class = "contatcus"><a href="mailto:pr@connechub.com">pr@connechub.com</a></span></li><br>
-                <li><span class = "small-heading">  Finance:</span> <span class = "contatcus"><a href="mailto:invoices@connechub.com">invoices@connechub.com</a></span></li><br>
-                <li><span class = "small-heading">  Product & Site Feedback:</span> <span class = "contatcus"><a href="mailto:feedback@connechub.com">feedback@connechub.com</a></span></li><br>
-                <li><span class = "small-heading">  Technical Support:</span> <span class = "contatcus"><a href="mailto:support@connechub.com">support@connechub.com</a></span></li><br>
-                <li><span class = "small-heading">  Privacy:</span> <span class = "contatcus"><a href="mailto:privacy@connechub.com">privacy@connechub.com</a></span></li><br>
-                <li><span class = "small-heading"> Give us a call:</span> <span class = "contatcus"> 813.438.4181</span></li><br>
-                </ul>
-                </div>
-        </div>
-
-        <hr class="featurette-divider">
-
-
-        <!-- Footer -->
-
+<!-- Page Content -->
+<div class="container">
+    <hr class="featurette-divider">
+    <!-- First Featurette -->
+    <div class="featurette" id="about">
+        <img class="featurette-image img-circle img-responsive pull-right" style="width: 450px; height: 440px" src="/assets/cntu6-5593ac848a1a6904b642f25714717933b4fb377cd7e60b7060f8729e74472e04.jpg" alt="Cntu6 5593ac848a1a6904b642f25714717933b4fb377cd7e60b7060f8729e74472e04" />
+        <h2 class="featurette-heading">Welcome to Connechub
+            <span class="text-muted">Contact us</span>
+        </h2>
+        <hr>
+        <ul style="list-style-type: none; ">
+            <li><span class = "small-heading"> Email:</span> <span class = "contatcus"><a href="mailto:support@connechub.com">support@connechub.com</a></span></li><br>
+            <li><span class = "small-heading"> Phone:</span> <span class = "contatcus"> 813.438.4181</span></li><br>
+        </ul>
     </div>
 </div>
+
+<hr class="featurette-divider">
+
+<!-- Footer -->
 <div style="height: 15px; width: 100%;"></div>
