--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -100,14 +100,7 @@
                       <li class="dropup">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Careers <i class="fa fa-sort"></i></span></a>
                         <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'Corporate', corporate_path %></a></li>
-                          <li><%= link_to 'Cutomer Service', customersupport_path %></li>
-                          <li><%= link_to 'Design', design_path %></li>
-                          <li><%= link_to 'Marketing', marketing_path %></li>
-                          <li><%= link_to 'Mobile', mobile_path %></li>
-                          <li><%= link_to 'Sales', sales_path %></li>
-                          <li><%= link_to 'Technology', technology_path %></li>
-
+                          <li><%= link_to 'Connechub Roles', connechub_roles_path %></a></li>
                         </ul>
                       </li>
                       <li class="dropup">
