--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,6 +84,7 @@
                       <li class="dropup">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">About Us <i class="fa fa-sort"></i></span></a>
                         <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
+                          <li><%= link_to 'Careers', career_path %></a></li>
                           <li><%= link_to 'Connechub', about_path %></li>
                           <li><%= link_to 'Contact Us', contact_path %></li>
                           <li><%= link_to 'Prices', '/prices/index' %></li>
@@ -95,12 +96,6 @@
                           <li><%= link_to 'Terms of Conditions', terms_path %></li>
                           <li><%= link_to 'Privacy Policy', privacy_path %></li>
                           <li><%= link_to 'Posting Terms of Use', postterm_path %></li>
-                        </ul>
-                      </li>
-                      <li class="dropup">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="ts-label">Careers <i class="fa fa-sort"></i></span></a>
-                        <ul class="dropdown-menu dropup dropup-menu" role="menu" aria-labelledby="dLabel">
-                          <li><%= link_to 'Connechub Roles', cconnechub_roles_path %></a></li>
                         </ul>
                       </li>
                       <li class="dropup">
