Career path update worked. REMOVED unwanted verbaige.

--- a/app/views/pages/career.html.erb
+++ b/app/views/pages/career.html.erb
@@ -9,9 +9,7 @@
 
         <%=image_tag "Customer-Service.jpg", class: 'featurette-image img-circle img-responsive pull-right', style: 'width: 450px; height: 440px' %>
 
-        <h2 class="featurette-heading">Welcome to Connechub
-            <div class="text-muted">Customer Service Team</div>
-        </h2>
+        <h2 class="featurette-heading">Welcome to Connechub</h2>
         <p class="lead">Customer Service is at the center of everything we do at Connechub, and we empower our Customer Service professionals to do all they can to make the The Hub experience better for our customers. </p>
         <p class="lead"> They assess needs, create unique solutions and resolve concerns with the goal of exceeding each customer's expectations, no matter how large or small the request.</p>
 
