Posting form validation update.

--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -75,7 +75,7 @@
                             required: true,
                             type: "text",
                             maxlength: "128",
-                            pattern: "[A-Za-z0-9 _.,!\"\']{128}",
+                            pattern: "[A-Za-z0-9 ]{128}",
                             placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
