--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -74,7 +74,7 @@
                             required: true,
                             type: "text",
                             maxlength: "128",
-                            pattern: "[A-Za-z0-9 ]{128}",
+                            pattern: "[a-zA-Z\ ]",
                             placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
