--- a/app/views/listings/new.erb
+++ b/app/views/listings/new.erb
@@ -73,9 +73,9 @@
                         <%= f.text_field :title,
                             class: "form-control",
                             required: true,
-                            type: "text",
+                            type: "regexp",
                             maxlength: "128",
-                            pattern: "[a-zA-Z\ ]",
+                            pattern: "[A-Za-z\s]+",
                             placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
@@ -88,7 +88,7 @@
                             required: true,
                             type: "text",
                             maxlength: "32",
-                            pattern: "[A-Za-z0-9 _.,!\"\']{32}",
+                            pattern: "[A-Za-z\s]+",
                             placeholder: "exp. Sometown"
                         %>
                     </div>
@@ -127,7 +127,7 @@
                             required: true,
                             type: "text",
                             maxlength: "2048",
-                            pattern: "[a-zA-Z0-9!,.?-]{2048}",
+                            pattern: "[A-Za-z\s\!\$\,\.\?]+{2048}",
                             placeholder: "exp. Describe the item for sale as detailed as possible."
                         %>
                     </div>
@@ -150,3 +150,13 @@
 </div>
 
 <%= render "processing_overlay" %>
+
+<script>
+$(function () {
+    $('#listings_submit').on('click', function(){
+        if (document.getElementById('new_listing').checkValidity() == true){
+            $("#overlay").toggle()
+        }
+    })
+});
+</script>
