Progress bar is not working, trying to fix it.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -60,6 +60,7 @@ $(function () {
         }
     })
 
+    var media_file = [];
     document.getElementById('fileupload').onchange = setFileInfo;
 
     /* get file runtime */
