--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -32,6 +32,7 @@
                         type: "file"
                     %>
 
+                    <br>
                     <div id="listing_media_info"></div>
                     <br>
 
@@ -90,9 +91,90 @@ $(function () {
         video.src = URL.createObjectURL(files[0]);
     }
     
-    $('#listings_submit').on('click', function () {
-        if (document.getElementById('new_listing_upload').checkValidity() == true){
-            $("#overlay").toggle()
+    $('#listings_submit').on('click', function (e) {
+        console.log('button clicked');
+
+        if (document.getElementById('new_listing_upload').checkValidity() == true) {
+            console.log('form valid');
+            e.preventDefault();
+            // $("#overlay").toggle();
+
+            $('#new_listing_upload').find("input:file").each(function(i, elem) {
+                var fileInput = $(elem);
+                var form = $(fileInput.parents('form:first'));
+                var submitButton = form.find('input[type="submit"]');
+                var progressBar  = $("<div class='bar'></div>");
+                var barContainer = $("<div class='progress'></div>").append(progressBar);
+                
+                $('#listing_media_progress').after(barContainer);
+
+                fileInput.fileupload({
+                    fileInput: fileInput,
+                    url: form.data('url'),
+                    type: 'POST',
+                    autoUpload: false,
+                    formData: form.data('form-data'),
+                    paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
+                    dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
+                    replaceFileInput: false,
+                    add: function (e, data) {
+                        data.submit();
+                    },
+                    progressall: function (e, data) {
+                        var progress = parseInt(data.loaded / data.total * 100, 10);
+                        progressBar.css('width', progress + '%')
+                    },
+                    start: function (e) {
+                        submitButton.prop('disabled', true);
+                        progressBar.
+                            css('background', 'green').
+                            css('display', 'block').
+                            css('width', '0%').
+                            text("Loading...");
+                    },
+                    done: function(e, data) {
+                        console.log('Now AJAX call and update listings.')
+
+                        submitButton.prop('disabled', false);
+                        progressBar.text("Uploading done");
+
+                        // extract key and generate URL from response
+                        var key   = $(data.jqXHR.responseXML).find("Key").text();
+                        var url   = '//' + form.data('host') + '/' + key;
+
+                        // create hidden field
+                        // var input = $("<input />", { type:'input', name: fileInput.attr('name'), value: url })
+                        console.log('final filename: ', key)
+                        var url_path = window.location.pathname.split('/');
+                        var listings_id = url_path[url_path.length - 1];
+
+                        $.ajax({
+                            type: 'PATCH',
+                            url: '/listings/update_upload/' + listings_id,
+                            data: {
+                                id: listings_id,
+                                media_file_name: key
+                            },
+                            dataType: 'json',
+                            statusCode: {
+                                200: function() {
+                                    // if the response is a 200, success, fwd to listing item view
+                                    console.log('Redirecting to listing item view.')
+                                    // window.location.href = "//" + window.location.hostname + "/listings/" + listings_id;
+                                    console.log('redirect to', window.location.hostname)
+                                    //window.location.href = "//" + window.location.hostname
+                                }
+                            }
+                        })
+                    },
+                    fail: function(e, data) {
+                        submitButton.prop('disabled', false);
+                        progressBar.
+                            css("background", "red").
+                            text("Failed");
+                    }
+                });
+            });
         }
     });
 });
