--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -4,12 +4,11 @@
 
             <div class="panel-heading">
                 <h2>Upload Media for New Listing</h2>
-                <div class="red">Acceptable file types are avi, .mov, .mp4, or .mkv .</div>
             </div>
 
             <div class="panel-body">
 
-                <%= simple_form_for(@listing,html: {
+                <%= simple_form_for(@listing, html: {
                     authenticity_token: true,
                     data: {
                         'form-data' => (@s3_direct_post.fields),
@@ -18,11 +17,8 @@
                     },
                     class: 'form-horizontal ',
                     id: 'new_listing_upload',
-                    multipart: true
+                    multipart: true,
                 }) do |f| %>
-
-                    <%# source https://stevenyue.com/blogs/validate-attachment-file-size-and-type-in-rails/ %>
-                    <%# source http://www.seanbehan.com/onchange-event-fired-from-select-field-in-rails-form/ %>
 
                     <%= f.file_field :listing,
                         accept: ".avi, .mov, .mp4, .mkv",
@@ -38,13 +34,13 @@
 
                     <div id="listing_media_progress"></div>
 
-                    <div class="input-group">
-                        <div class="actions">
-                            <%= f.submit "Submit Media", class: "btn btn-success", id: "listings_submit" %>
-                        </div>
-                    </div>
-
                 <% end %>
+
+                <div class="input-group">
+                    <div class="actions">
+                        <button class="btn btn-success" id="listings_submit">Submit</button>
+                    </div>
+                </div>
 
             </div>
         </div>
@@ -54,7 +50,7 @@
 <%= render "processing_overlay" %>
 
 <script>
-$(function () {
+    $(function () {
     var media_file = [];
 
     document.getElementById('fileupload').onchange = setFileInfo;
@@ -91,92 +87,83 @@ $(function () {
         video.src = URL.createObjectURL(files[0]);
     }
     
-    $('#listings_submit').on('click', function (e) {
-        console.log('button clicked');
+    $('#new_listing_upload').find("input:file").each(function(i, elem) {
+        var fileInput = $(elem);
+        var form = $(fileInput.parents('form:first'));
+        var submitButton = form.find('input[type="submit"]');
+        var progressBar  = $("<div class='bar'></div>");
+        var barContainer = $("<div class='progress'></div>").append(progressBar);
+        
+        $('#listing_media_progress').after(barContainer);
 
-        if (document.getElementById('new_listing_upload').checkValidity() == true) {
-            console.log('form valid');
-            e.preventDefault();
-            // $("#overlay").toggle();
-
-            $('#new_listing_upload').find("input:file").each(function(i, elem) {
-                var fileInput = $(elem);
-                var form = $(fileInput.parents('form:first'));
-                var submitButton = form.find('input[type="submit"]');
-                var progressBar  = $("<div class='bar'></div>");
-                var barContainer = $("<div class='progress'></div>").append(progressBar);
-                
-                $('#listing_media_progress').after(barContainer);
-
-                fileInput.fileupload({
-                    fileInput: fileInput,
-                    url: form.data('url'),
-                    type: 'POST',
-                    autoUpload: false,
-                    formData: form.data('form-data'),
-                    paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
-                    dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
-                    replaceFileInput: false,
-                    add: function (e, data) {
-                        data.submit();
-                    },
-                    progressall: function (e, data) {
-                        var progress = parseInt(data.loaded / data.total * 100, 10);
-                        progressBar.css('width', progress + '%')
-                    },
-                    start: function (e) {
-                        submitButton.prop('disabled', true);
-                        progressBar.
-                            css('background', 'green').
-                            css('display', 'block').
-                            css('width', '0%').
-                            text("Loading...");
-                    },
-                    done: function(e, data) {
-                        console.log('Now AJAX call and update listings.')
-
-                        submitButton.prop('disabled', false);
-                        progressBar.text("Uploading done");
-
-                        // extract key and generate URL from response
-                        var key   = $(data.jqXHR.responseXML).find("Key").text();
-                        var url   = '//' + form.data('host') + '/' + key;
-
-                        // create hidden field
-                        // var input = $("<input />", { type:'input', name: fileInput.attr('name'), value: url })
-                        console.log('final filename: ', key)
-                        var url_path = window.location.pathname.split('/');
-                        var listings_id = url_path[url_path.length - 1];
-
-                        $.ajax({
-                            type: 'PATCH',
-                            url: '/listings/update_upload/' + listings_id,
-                            data: {
-                                id: listings_id,
-                                media_file_name: key
-                            },
-                            dataType: 'json',
-                            statusCode: {
-                                200: function() {
-                                    // if the response is a 200, success, fwd to listing item view
-                                    console.log('Redirecting to listing item view.')
-                                    // window.location.href = "//" + window.location.hostname + "/listings/" + listings_id;
-                                    console.log('redirect to', window.location.hostname)
-                                    //window.location.href = "//" + window.location.hostname
-                                }
-                            }
-                        })
-                    },
-                    fail: function(e, data) {
-                        submitButton.prop('disabled', false);
-                        progressBar.
-                            css("background", "red").
-                            text("Failed");
-                    }
+        fileInput.fileupload({
+            fileInput: fileInput,
+            url: form.data('url'),
+            type: 'POST',
+            autoUpload: false,
+            formData: form.data('form-data'),
+            paramName: 'file', // S3 does not like nested name fields i.e. name="user[avatar_url]"
+            dataType: 'XML',  // S3 returns XML if success_action_status is set to 201
+            replaceFileInput: false,
+            add: function (e, data) {
+                $('button#listings_submit').off('click').on('click', function () {
+                    $("#overlay").toggle()
+                    //data.submit();
                 });
-            });
-        }
+            },
+            progressall: function (e, data) {
+                var progress = parseInt(data.loaded / data.total * 100, 10);
+                progressBar.css('width', progress + '%')
+            },
+            start: function (e) {
+                submitButton.prop('disabled', true);
+                progressBar.
+                    css('background', 'green').
+                    css('display', 'block').
+                    css('width', '0%').
+                    text("Loading...");
+            },
+            done: function(e, data) {
+                console.log('Now AJAX call and update listings.')
+
+                submitButton.prop('disabled', false);
+                progressBar.text("Uploading done");
+
+                // extract key and generate URL from response
+                var key   = $(data.jqXHR.responseXML).find("Key").text();
+                var url   = '//' + form.data('host') + '/' + key;
+
+                // create hidden field
+                // var input = $("<input />", { type:'input', name: fileInput.attr('name'), value: url })
+                console.log('final filename: ', key)
+                var url_path = window.location.pathname.split('/');
+                var listings_id = url_path[url_path.length - 1];
+
+                $.ajax({
+                    type: 'PATCH',
+                    url: '/listings/update_upload/' + listings_id,
+                    data: {
+                        id: listings_id,
+                        media_file_name: key
+                    },
+                    dataType: 'json',
+                    statusCode: {
+                        200: function() {
+                            // if the response is a 200, success, fwd to listing item view
+                            console.log('Redirecting to listing item view.')
+                            // window.location.href = "//" + window.location.hostname + "/listings/" + listings_id;
+                            window.location.href = "//" + window.location.hostname
+                        }
+                    }
+                })
+            },
+            fail: function(e, data) {
+                submitButton.prop('disabled', false);
+                progressBar.
+                    css("background", "red").
+                    text("Failed");
+            }
+        });
     });
 });
 </script>
-
