--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -3,8 +3,8 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <h2>Edit Your Posting</h2>
-                <div class = "small-heading", style="color:red">(All fields required.)</div>
+                <h2>Edit New Listing</h2>
+                <div class = "small-heading">(All fields required.) </div>
             </div>
 
             <div class="panel-body">
@@ -74,7 +74,8 @@
                             class: "form-control",
                             required: true,
                             type: "regexp",
-                            pattern: "[A-Za-z\s]+{128}",
+                            maxlength: "128",
+                            pattern: "[A-Za-z\s]+",
                             placeholder: "exp. Example Item for Sale"
                         %>
                     </div>
@@ -86,7 +87,8 @@
                             class: "form-control",
                             required: true,
                             type: "text",
-                            pattern: "[A-Za-z\s]+{32}",
+                            maxlength: "32",
+                            pattern: "[A-Za-z\s]+",
                             placeholder: "exp. Sometown"
                         %>
                     </div>
@@ -98,7 +100,8 @@
                             class: "form-control",
                             required: true,
                             type: "text",
-                            pattern: "[A-Z]+{2}",
+                            maxlength: "2",
+                            pattern: "[A-Z]{2}",
                             placeholder: "exp. FL"
                         %>
                     </div>
@@ -110,7 +113,8 @@
                             class: "form-control",
                             required: true,
                             type: "number",
-                            pattern: "[0-9]+{5}",
+                            maxlength: "5",
+                            pattern: "[0-9]{5}",
                             placeholder: "exp. 12345"
                         %>
                     </div>
@@ -122,6 +126,7 @@
                             class: "form-control",
                             required: true,
                             type: "text",
+                            maxlength: "2048",
                             pattern: "[A-Za-z\s\!\$\,\.\?]+{2048}",
                             placeholder: "exp. Describe the item for sale as detailed as possible."
                         %>
@@ -149,7 +154,7 @@
 <script>
 $(function () {
     $('#listings_submit').on('click', function(){
-        if (document.getElementById('edit_listing').checkValidity() == true){
+        if (document.getElementById('new_listing').checkValidity() == true){
             $("#overlay").toggle()
         }
     })
