ADDED link in user profile to change listing media. UPDATED Listing upload text to match new ability.

--- a/app/views/listings/upload.html.erb
+++ b/app/views/listings/upload.html.erb
@@ -3,7 +3,7 @@
         <div class="panel panel-default">
 
             <div class="panel-heading">
-                <h2>Upload Media for New Listing</h2>
+                <h2>Upload Media for Listing</h2>
                 <div>Please provide a video file for your listing. File types .avi, .mov, .mp4, .mkv are accepted.</div>
             </div>
 
