--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -38,8 +38,9 @@
                             <small class = "board-name"><%= listing.created_at.strftime('%B %d, %Y') %></small>
                           <hr>
                             <% if listing.user == current_user %>
-                            <span class="description"><%= link_to 'Edit', edit_listing_path(listing) %></span> |
-                            <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span>
+                            <span class="description"><%= link_to 'Edit Listing', edit_listing_path(listing) %></span> |
+                                                      <span class="description"><%= link_to 'Delete', listing, method: :delete, data: { confirm: 'Are you sure?' } %></span> |
+                            <span class="description"><%= link_to 'Change Video', "listings/upload/#{listing.id}" %></span>
                             <% end %>
                           </div>
                       </div>
